# gyo

./: LICENSE  README.md  package-lock.json
gyo-angular/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
gyo-angular/src/: index.html
gyo-angular/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  todo.service.ts
gyo-angular/src/app/todo-input/: todo-input.component.html  todo-input.component.ts
gyo-angular/src/app/todo-item/: todo-item.component.html  todo-item.component.scss  todo-item.component.ts
gyo-angular/src/app/todo-list/: todo-list.component.html  todo-list.component.ts
gyo-api/: alembic.ini  main.py  pyproject.toml  requirements.txt
gyo-api/alembic/: env.py
gyo-api/alembic/versions/: 9ec9d74189a7_create_todos_table.py
gyo-app/: .gitignore  package-lock.json  package.json
gyo-app/components/: TodoInput.tsx  TodoItem.tsx  TodoList.tsx
gyo-app/pages/: index.tsx
gyo-app/terraform/: .terraform.lock.hcl  main.tf  project.tf  variable.tf
gyo-app/utils/: api.ts
gyo-aspdotnet/: Program.cs  WeatherForecast.cs  appsettings.Development.json  appsettings.json  gyo-aspdotnet.csproj
gyo-aspdotnet/Controllers/: TodoItemsController.cs  WeatherForecastController.cs
gyo-aspdotnet/Models/: TodoContext.cs  TodoItem.cs
gyo-aspdotnet/Properties/: launchSettings.json
