[tool.poetry]
name = "gyo-api"
version = "0.1.0"
description = ""
authors = ["Naoyuki Nakadozono <nnakadozono@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.23.2"
sqlalchemy = "1.4.42"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"
pydantic = "^2.4.2"
asyncpg = "^0.28.0"
databases = "^0.8.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
